<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:theme="@style/AppTheme.NoActionBar"
        android:background="@drawable/product_logo">

    <TextView
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_Register"
            android:textSize="18sp"
            android:textAlignment="center" android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:textAllCaps="false"
            android:onClick="register"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
            android:id="@+id/editText_Login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_login"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/editText_Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText_Password" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_Login" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:hint="@string/enter_password" android:autofillHints=""
            android:imeOptions="actionDone"
    />
    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@xml/spinner_ring"
            android:indeterminateOnly="true"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_Password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="168dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="168dp" android:id="@+id/pb_login"/>
    <TextView
            android:text="@string/restore_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_Restore"
            android:textColor="@color/colorWhite"
            android:visibility="invisible" android:onClick="restorePassword"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_Password"/>
    <TextView
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_Login"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:textSize="18sp"
            android:textAlignment="center" android:textColor="@color/colorWhite" android:onClick="login"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textView_Register"/>
</android.support.constraint.ConstraintLayout>